# Resume_to_json

./: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py
app/data/: role_templates.json  skills.json
app/models/: schemas.py
app/routes/: resume.py
app/services/: ai_evaluator_service.py  analyzer_service.py  data_service.py  nlp_service.py  pdf_service.py  supabase_service.py
supabase/: setup.sql
