[project]
name = "resume-to-json"
version = "0.1.0"
description = "AI Resume Analyzer API MVP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "pymupdf>=1.23.0",
    "spacy>=3.7.0",
    "supabase>=2.4.0",
    "pydantic-settings>=2.2.1",
    "httpx>=0.27.0",
]
